@@ -17,6 +17,6 @@
 1	0	127	255	2	0	127	255
 2	0	26	255	3	0	26	255
 3	0	0	178	4	0	0	178
-B	127	0	0
-F	0	0	178
+B	255	255	255
+F	255	255	255
 N	255	255	255
